assets/styles.css
html {
  font-size: 62.5%;
  background: white;
}
body {
  font-size: 1.5em;
  line-height: 1.6;
  font-weight: 400;
  font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
    sans-serif;
  color: rgb(50, 50, 50);
  background: white;
}

.main_div {
  padding-right: 0;
  margin-left: 7%;
  background: white;
  width: 100%;
}

.audio_analysis {
  width: 100%;
}

.audio_label_col {
  width: 100%;
}

#audio_row {
  align-items: start;
  margin-top: 50px;
}

#tabs {
  width: 100%;
  padding-left: 5%;
}

#learn-more-button {
  text-align: center;
  height: 100%;
  text-transform: none;
  font-size: 15px;
  float: right;
  padding: 0 20px;
  margin: 0px;
}

